--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.3",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -43,6 +44,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^19.1.2",
+    "@types/react-scroll": "^1.8.10",
     "typescript": "^5.8.3"
   }
 }
